<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:background="@android:color/white"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="true"
        app:behavior_peekHeight="60dp">
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/iv_bottom_sheet_search"/>
    <EditText
            android:id="@+id/et_bottom_sheet_search"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_bottom_sheet_search"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/iv_bottom_sheet_search"
            app:layout_constraintTop_toTopOf="@+id/iv_bottom_sheet_search"
            android:hint="@string/et_bottom_sheet_search_hint"
            android:imeOptions="actionSearch"/>
    <TextView
            android:id="@+id/tv_bottom_sheet_search_nearby_places"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_bottom_sheet_search_nearby_places"
            android:layout_margin="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/iv_bottom_sheet_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_grocery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bottom_sheet_search_nearby_places"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/iv_bottom_sheet_grocery"/>
    <TextView
            android:id="@+id/tv_bottom_sheet_grocery_icon_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/iv_bottom_sheet_grocery"
            app:layout_constraintStart_toStartOf="@+id/iv_bottom_sheet_grocery"

            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/iv_bottom_sheet_grocery"
            android:text="@string/tv_bottom_sheet_grocery_icon_hint"
            android:textSize="12sp"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_medical_services"
            app:layout_constraintStart_toEndOf="@id/iv_bottom_sheet_grocery"
            android:layout_marginStart="8dp"
            android:id="@+id/iv_bottom_sheet_pharmacy"
            app:layout_constraintTop_toTopOf="@+id/iv_bottom_sheet_grocery"
            app:layout_constraintBottom_toBottomOf="@+id/iv_bottom_sheet_grocery"/>
    <TextView
            android:id="@+id/tv_bottom_sheet_medical_services_icon_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/iv_bottom_sheet_pharmacy"
            app:layout_constraintStart_toStartOf="@+id/iv_bottom_sheet_pharmacy"

            app:layout_constraintTop_toBottomOf="@+id/iv_bottom_sheet_pharmacy"
            android:text="@string/tv_bottom_sheet_medical_services_icon_hint"
            android:textAlignment="center"
            android:textSize="12sp"/>
    <ImageView
            android:id="@+id/iv_bottom_sheet_restaurants"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_restaurant"
            app:layout_constraintStart_toEndOf="@id/iv_bottom_sheet_pharmacy"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/iv_bottom_sheet_grocery"
            app:layout_constraintBottom_toBottomOf="@+id/iv_bottom_sheet_grocery"/>
    <TextView
            android:id="@+id/tv_bottom_sheet_restaurants_icon_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/iv_bottom_sheet_restaurants"
            app:layout_constraintStart_toStartOf="@+id/iv_bottom_sheet_restaurants"

            app:layout_constraintTop_toBottomOf="@+id/iv_bottom_sheet_restaurants"
            android:text="@string/tv_bottom_sheet_restaurants_icon_hint"
            android:textAlignment="center"
            android:textSize="12sp"/>
    <ImageView
            android:id="@+id/iv_bottom_sheet_cafe"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_cafe"
            app:layout_constraintStart_toEndOf="@id/iv_bottom_sheet_restaurants"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/iv_bottom_sheet_grocery"
            app:layout_constraintBottom_toBottomOf="@+id/iv_bottom_sheet_grocery"/>
    <TextView
            android:id="@+id/tv_bottom_sheet_cafe_icon_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/iv_bottom_sheet_cafe"
            app:layout_constraintStart_toStartOf="@+id/iv_bottom_sheet_cafe"

            app:layout_constraintTop_toBottomOf="@+id/iv_bottom_sheet_cafe"
            android:text="@string/tv_bottom_sheet_cafe_icon_hint"
            android:textAlignment="center"
            android:textSize="12sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>